<resources>
    <string name="app_name">ToDo List</string>
    <string name="title">Task Title</string>
    <string name="date">Task Date</string>
    <string name="time">Task Time</string>
    <string name="prior">Task Priority</string>
    <string name="task">Task 0 of 0</string>
    <string name="titl">Title</string>
    <string name="dat">Date</string>
    <string name="tim">Time</string>
    <string name="proirity" />
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>
